# KisTrading

./: .env  .gitignore  README.md  pyproject.toml  webserver.py
src/account/: my_account.py
src/order/: order.py
src/overseas_stock/: overseas_stock_functions.py
src/stocks_info/: stocks_info.py
src/utils/: kis_auth.py  utils.py
